Fix: Make text a bit bigger for readability

--- a/styles.css
+++ b/styles.css
@@ -1,5 +1,6 @@
 body {
   width: 100%;
+  font-size: 1.4rem;
 
   section {
     width: 100%;
